virt01/manual/torrent/droppedneedle/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: droppedneedle-ingress
  namespace: torrent
  annotations:
    cert-manager.io/cluster-issuer: nf-lab
    cert-manager.io/private-key-rotation-policy: Always
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.alpha.kubernetes.io/target: traefik.k3s.nf.lab
spec:
  ingressClassName: traefik
  rules:
    - host: droppedneedle.k3s.nf.lab
      http:
        paths:
          - backend:
              service:
                name: droppedneedle-svc
                port:
                  number: 8688
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - droppedneedle.k3s.nf.lab
      secretName: droppedneedle-cert-tls
